--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1941,7 +1941,7 @@ a:focus {
 }
 
 .contact .col-md-6:first-child {
-    background: #02187e;
+    background: #ffffff;
 }
 
 .contact .col-md-6:last-child {
@@ -1984,7 +1984,7 @@ a:focus {
 
 .contact .contact-text p {
     margin: 0;
-    color: #ffffff;
+    color: #7c2a2a;
     font-size: 16px;
 }
 
