--- a/public/css/style.css
+++ b/public/css/style.css
@@ -77,7 +77,7 @@ a:focus {
 /**********************************/
 .top-bar {
     position: center;
-    height: 90px;
+    height: 120px;
     width: device-width;
     background: #ffffff;
 }
@@ -97,8 +97,8 @@ a:focus {
 }
 
 .top-bar .logo img {
-    max-width: 100%;
-    max-height: 60px;
+    max-width: 150%;
+    max-height: 100px;
 }
 
 .top-bar .top-bar-item {
@@ -383,8 +383,8 @@ a:focus {
 /*******************************/
 .page-header {
     position: relative;
-    margin-bottom: 45px;
-    padding: 90px 0;
+    margin-bottom: 0px;
+    padding: 50px 0;
     text-align: center;
     background: #ffffff;
 }
@@ -392,16 +392,16 @@ a:focus {
 .page-header h2 {
     position: relative;
     color: #02187e;
-    font-size: 60px;
-    font-weight: 700;
-    margin-bottom: 20px;
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 10px;
     padding-bottom: 5px;
 }
 
 .page-header h2::after {
     position: absolute;
     content: "";
-    width: 100px;
+    width: 50px;
     height: 2px;
     left: calc(50% - 50px);
     bottom: 0;
@@ -475,7 +475,7 @@ a:focus {
 .section-header p {
     color: #02187e;
     font-size: 18px;
-    font-weight: 600;
+    font-weight: 400;
     margin-bottom: 5px;
 }
 
@@ -486,7 +486,7 @@ a:focus {
     font-weight: 700;
 }
 
-@media (max-width: 767.98px) {
+@media (max-width: 500px) {
     .section-header h2 {
         font-size: 30px;
     }
@@ -1951,7 +1951,7 @@ a:focus {
 .contact .contact-info {
     position: relative;
     width: 100%;
-    padding: 0 15px;
+    padding: 0 px;
 }
 
 .contact .contact-item {
@@ -1961,7 +1961,7 @@ a:focus {
     display: flex;
     align-items: flex-start;
     flex-direction: row;
-    border: 1px solid rgba(256, 256, 256, .2);
+    border: 4px solid rgba(180,18,18);
 }
 
 .contact .contact-item [class^="flaticon-"]::before {
