--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,7 +46,7 @@ a:focus {
     position: fixed;
     display: none;
     background: #02187e;
-    color: #B19203;
+    color: #b41212;
     width: 44px;
     height: 44px;
     text-align: center;
@@ -59,7 +59,7 @@ a:focus {
 }
 
 .back-to-top:hover {
-    color: #B19203;
+    color: #ffffff;
     background: #02187e;
 }
 
@@ -685,14 +685,16 @@ a:focus {
 }
 
 .fact .fact-text h2 {
-    font-size: 35px;
+    font-size: 30px;
     font-weight: 700;
+    padding: 30px 30px;
 }
 
 .fact .fact-text p {
     margin: 0;
     font-size: 16px;
-    font-weight: 600;
+    font-weight: 700;
+    padding: 5px 50px;
     text-transform: uppercase;
 }
 
@@ -1961,13 +1963,13 @@ a:focus {
     display: flex;
     align-items: flex-start;
     flex-direction: row;
-    border: 4px solid rgba(180,18,18);
+    border: 0px solid rgba(180,18,18);
 }
 
 .contact .contact-item [class^="flaticon-"]::before {
     margin: 0;
-    color: #fdbe33;
-    font-size: 40px;
+    color: #02187e;
+    font-size: 50px;
 }
 
 .contact .contact-text {
@@ -1977,15 +1979,15 @@ a:focus {
 }
 
 .contact .contact-text h2 {
-    color: #fdbe33;
-    font-size: 20px;
+    color: #02187e;
+    font-size: 30px;
     font-weight: 600;
 }
 
 .contact .contact-text p {
     margin: 0;
-    color: #7c2a2a;
-    font-size: 16px;
+    color: #000000;
+    font-size: px;
 }
 
 .contact .contact-item:last-child {
@@ -2037,7 +2039,7 @@ a:focus {
     padding: 16px 30px;
     font-size: 16px;
     font-weight: 600;
-    color: #fdbe33;
+    color: #ffffff;
     background: #02187e;
     border: none;
     border-radius: 0;
