--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1871,7 +1871,7 @@ a:focus {
     font-size: 16px;
     font-weight: 600;
     color: #ffffff;
-    background: #02187e;
+    background: #b41212;
     border: none;
     border-radius: 0;
     transition: .3s;
