--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1906,7 +1906,7 @@ a:focus {
     position: relative;
     margin-bottom: 45px;
 }
-.footer h1 {
+/* .footer h1 {
     position: relative;
     margin-bottom: 20px;
     padding-bottom: 10px;
@@ -1922,7 +1922,7 @@ a:focus {
     left: 0;
     bottom: 0;
     background: #ffffff;
-}
+} */
 .footer h2 {
     position: relative;
     margin-bottom: 20px;
