--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1884,8 +1884,8 @@ a:focus {
 /*******************************/
 .footer {
     position: relative;
-    margin-top: 50px;
-    padding-top: 50px;
+    margin-top: 20px;
+    padding-top: 40px;
     background: #02187e;
     color: #ffffff;
 }
@@ -1894,12 +1894,12 @@ a:focus {
 .footer .footer-link,
 .footer .newsletter {
     position: relative;
-    margin-bottom: 120px;
+    margin-bottom: 30px;
 }
 .footer h1 {
     position: relative;
     margin-bottom: 10px;
-    padding-bottom: 10px;
+    padding-bottom: 5px;
     font-size: 25px;
     font-weight: 600;
     color: #ffffff;
@@ -1920,7 +1920,7 @@ a:focus {
     padding-bottom: 5px;
     font-size: 25px;
     font-weight: 600;
-    color: #02187e;
+    color: #ffffff;
 }
 
 
@@ -2014,7 +2014,7 @@ a:focus {
 
 .footer .footer-menu .f-menu {
     position: relative;
-    padding: 30px 0;
+    padding: 15px 0;
     font-size: 0;
     text-align: center;
     border-top: 1px solid rgba(256, 256, 256, .1);
