--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1748,6 +1748,24 @@ a:focus {
     background: #b41212;
 }
 
+.portfolio .port-text a.btn {
+    position: relative;
+    margin-top: 5px;
+    padding: 15px 35px;
+    font-size: 16px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    color: #ffffff;
+    border-radius: 0;
+    background: #02187e;
+    transition: .3s;
+}
+
+.portfolio .port-text a.btn:hover {
+    color: #ffffff;
+    background: #b41212;
+}
+
 
 /*******************************/
 /********* Contact CSS *********/
