--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1603,6 +1603,23 @@ a:focus {
     background: #030f27;
 }
 
+.single .sin-text a.btn {
+    position: relative;
+    margin-top: 5px;
+    padding: 15px 35px;
+    font-size: 16px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    color: #ffffff;
+    border-radius: 0;
+    background: #02187e;
+    transition: .3s;
+}
+
+.single .sin-text a.btn:hover {
+    color: #ffffff;
+    background: #b41212;
+}
 
 
 
