--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1930,6 +1930,7 @@ a:focus {
 .footer .newsletter {
     position: relative;
     margin-bottom: 30px;
+    color: #ffffff;
 }
 .footer h1 {
     position: relative;
