--- a/public/lib/animate/animate.css
+++ b/public/lib/animate/animate.css
@@ -669,12 +669,12 @@
 @keyframes fadeInUp {
   from {
     opacity: 0;
-    transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 10%, 0);
   }
 
   to {
     opacity: 1;
-    transform: none;
+    transform: translate3d(0, 50%, 0);;
   }
 }
 
@@ -685,7 +685,7 @@
 @keyframes fadeInUpBig {
   from {
     opacity: 0;
-    transform: translate3d(0, 2000px, 0);
+    transform: translate3d(0, 1500px, 0);
   }
 
   to {
