--- a/public/lib/slide/slide.css
+++ b/public/lib/slide/slide.css
@@ -18,11 +18,12 @@ img {vertical-align: middle;}
 .prev, .next {
   cursor: pointer;
   position: absolute;
+  border: 3px solid #ffffff;
   top: 50%;
   width: auto;
   margin-top: -22px;
   padding: 16px;
-  color: white;
+  background-color: #ffffff;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
@@ -38,7 +39,7 @@ img {vertical-align: middle;}
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+  background-color: #b41212;
 }
 
 /* Caption text */
