--- a/public/css/style.css
+++ b/public/css/style.css
@@ -660,7 +660,7 @@ a:focus {
     font-size: 60px;
     line-height: 60px;
     background-image: linear-gradient(#ffffff, #ffffff);
-    /* -webkit-background-clip: text; */
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
@@ -1633,7 +1633,7 @@ a:focus {
 
 .portfolio #portfolio-flters {
     padding: 0;
-    margin: 15px 0 25px 0;
+    margin: -15px 0 25px 0;
     list-style: none;
     font-size: 0;
     text-align: center;
@@ -1644,7 +1644,7 @@ a:focus {
     cursor: pointer;
     display: inline-block;
     margin: 5px;
-    padding: 8px 8px;
+    padding: 8px 15px;
     color: #02187e;
     font-size: 15px;
     font-weight: 500;
@@ -1652,7 +1652,7 @@ a:focus {
     border-radius: 0;
     background: #c0c0c0;
     border: none;
-    /* transition: .3s; */
+    transition: .3s;
 }
 
 .portfolio #portfolio-flters li:hover,
@@ -1668,11 +1668,11 @@ a:focus {
 .portfolio .load-more .btn {
     padding: 15px 35px;
     font-size: 16px;
-    /* transition: .3s; */
+    transition: .3s;
 }
 
 .portfolio .load-more .btn:hover {
-    color: #8d836d;
+    color: #8d836d[];
     background: #02187e;
 }
 
@@ -1690,7 +1690,7 @@ a:focus {
 
 .portfolio .portfolio-img img {
     width: 100%;
-    /* transition: .3s; */
+    transition: .3s;
 }
 
 .portfolio .portfolio-item:hover img {
@@ -1708,6 +1708,7 @@ a:focus {
     align-items: center;
     justify-content: center;
     background: rgba(3, 15, 39, .7);
+    transition: .5s;
     opacity: 0;
 }
 
@@ -1739,14 +1740,14 @@ a:focus {
     color: #ffffff;
     text-align: center;
     overflow: hidden;
-    /* white-space: nowrap; */
+    white-space: nowrap;
     text-overflow: ellipsis;
 }
 
 .portfolio .portfolio-warp a.btn {
     width: 60px;
     height: 60px;
-    padding: 0px 5 5 10px;
+    padding: 0px 3 0 0px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1756,7 +1757,7 @@ a:focus {
     color: #ffffff;
     background: #02187e;
     border-radius: 0;
-    /* transition: .3s; */
+    transition: .3s;
 }
 
 .portfolio .portfolio-warp:hover a.btn {
@@ -1774,7 +1775,7 @@ a:focus {
     color: #ffffff;
     border-radius: 0;
     background: #02187e;
-    /* transition: .3s; */
+    transition: .3s;
 }
 
 .portfolio .port-text a.btn:hover {
