--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1690,7 +1690,7 @@ a:focus {
 
 .portfolio .portfolio-img img {
     width: 100%;
-    transition: .3s;
+    /* transition: .3s; */
 }
 
 .portfolio .portfolio-item:hover img {
@@ -1757,7 +1757,7 @@ a:focus {
     color: #ffffff;
     background: #02187e;
     border-radius: 0;
-    transition: .3s;
+    /* transition: .3s; */
 }
 
 .portfolio .portfolio-warp:hover a.btn {
@@ -1775,7 +1775,7 @@ a:focus {
     color: #ffffff;
     border-radius: 0;
     background: #02187e;
-    transition: .3s;
+    /* transition: .3s; */
 }
 
 .portfolio .port-text a.btn:hover {
