--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1690,7 +1690,7 @@ a:focus {
 
 .portfolio .portfolio-img img {
     width: 100%;
-    /* transition: .3s; */
+    transition: .3s;
 }
 
 .portfolio .portfolio-item:hover img {
@@ -1726,7 +1726,7 @@ a:focus {
     align-items: center;
     height: 60px;
     background: #02187e;
-    overflow: hidden;
+    /* overflow: hidden; */
     white-space: nowrap;
     text-overflow: ellipsis;
 }
@@ -1739,7 +1739,7 @@ a:focus {
     font-weight: 700;
     color: #ffffff;
     text-align: center;
-    overflow: hidden;
+    /* overflow: hidden; */
     white-space: nowrap;
     text-overflow: ellipsis;
 }
@@ -1757,11 +1757,11 @@ a:focus {
     color: #ffffff;
     background: #02187e;
     border-radius: 0;
-    /* transition: .3s; */
+    transition: .3s;
 }
 
 .portfolio .portfolio-warp:hover a.btn {
-   color: #ffffff;
+    color: #ffffff;
     background: #b41212;
 }
 
@@ -1775,7 +1775,7 @@ a:focus {
     color: #ffffff;
     border-radius: 0;
     background: #02187e;
-    /* transition: .3s; */
+    transition: .3s;
 }
 
 .portfolio .port-text a.btn:hover {
